discord server image uploading

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,8 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL
 
 # Database url for prisma
 DATABASE_URL
+
+# Upload thing
+UPLOADTHING_SECRET
+UPLOADTHING_APP_ID
+UPLOADTHING_URL
